# Covid19-Regional-Risk-Classification

./: Main.py  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
Dataset/: data_test_streamlit.csv
Models/: model_1.h5  model_2.h5  scaler_covid.pkl
Pages/: 1_MLP.py  2_AutoEncoder.py  3_TabNet.py  4_Forecasting.py  5_Tools.py
Pelatihan Model/: Evaluasi Modelipynb.ipynb
