[project]
name = "UAP"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Zulkifli A. Patuti", email = "zulkifli15082004@gmail.com"},
]
dependencies = [
    "streamlit>=1.52.2",
    "tensorflow>=2.20.0",
    "pandas>=2.3.3",
    "numpy>=2.2.6",
    "scikit-learn>=1.7.2",
    "matplotlib>=3.10.8",
    "pillow>=12.0.0",
    "torch>=2.7.1",
    "pytorch-tabnet>=4.1.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
